; ModuleID = '/home/carl/AnghaBench/git/extr_fsck.c_append_msg_id.c'
source_filename = "/home/carl/AnghaBench/git/extr_fsck.c_append_msg_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c": \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*)* @append_msg_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_msg_id(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %6

6:                                                ; preds = %32, %2
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds i8, i8* %7, i32 1
  store i8* %8, i8** %4, align 8
  %9 = load i8, i8* %7, align 1
  store i8 %9, i8* %5, align 1
  %10 = load i8, i8* %5, align 1
  %11 = icmp ne i8 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %6
  br label %33

13:                                               ; preds = %6
  %14 = load i8, i8* %5, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 95
  br i1 %16, label %17, label %22

17:                                               ; preds = %13
  %18 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %19 = load i8, i8* %5, align 1
  %20 = call i32 @tolower(i8 signext %19)
  %21 = call i32 @strbuf_addch(%struct.strbuf* %18, i32 %20)
  br label %32

22:                                               ; preds = %13
  %23 = load i8*, i8** %4, align 8
  %24 = load i8, i8* %23, align 1
  %25 = call i32 @assert(i8 signext %24)
  %26 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %4, align 8
  %29 = load i8, i8* %27, align 1
  %30 = sext i8 %29 to i32
  %31 = call i32 @strbuf_addch(%struct.strbuf* %26, i32 %30)
  br label %32

32:                                               ; preds = %22, %17
  br label %6

33:                                               ; preds = %12
  %34 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %35 = call i32 @strbuf_addstr(%struct.strbuf* %34, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i32) #1

declare dso_local i32 @tolower(i8 signext) #1

declare dso_local i32 @assert(i8 signext) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
